--- a/frontend/css/custom.css
+++ b/frontend/css/custom.css
@@ -27,7 +27,7 @@
     box-sizing: border-box;
 }
 
-.barra-lateral {
+.barra-lateralpc {
     top: 105px;
     left: 15px;
     bottom: 0;
@@ -366,4 +366,13 @@
 .cargarVideo {
     cursor: pointer;
     margin-right: 20px;
+}
+
+@media (max-width: 767.98px) {
+    .contenido-pc {
+        display: none;
+    }
+    .contenido-movil {
+        display: block;
+    }
 }
